--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -128,10 +128,11 @@
                 </div>
 				<div>
                     <img src="{% static 'images/rightform3.png' %}"/>
-                    <input type="text" name="address" id="companyAddress" placeholder="课程名" maxlength="50" />
+                    <input type="text" name="course_name" id="companyAddress" placeholder="课程名" maxlength="50" />
                 </div>
                 <p class="error company-tips" id="jsCompanyTips"></p>
 				<input class="btn" type="text" id="jsStayBtn" value="立即咨询 >" />
+            {% csrf_token %}
             </form>
 		</div>
 
@@ -153,4 +154,28 @@
 		</div>
         </div>
 </section>
+{% endblock %}
+{% block custom_js %}
+<script>
+    $(function(){
+        $('#jsStayBtn').on('click', function(){
+            $.ajax({
+                cache: false,
+                type: "POST",
+                url:"{% url "org:add_ask" %}",
+                data:$('#jsStayForm').serialize(),
+                async: true,
+                success: function(data) {
+                    if(data.status == 'success'){
+                        $('#jsStayForm')[0].reset();
+                        alert("提交成功")
+                    }else if(data.status == 'fail'){
+                        $('#jsCompanyTips').html(data.msg)
+                    }
+                },
+            });
+        });
+    })
+
+</script>
 {% endblock %}
