--- a/templates/login.html
+++ b/templates/login.html
@@ -51,7 +51,7 @@
     <div class="c-box bg-box">
         <div class="login-box clearfix">
             <div class="hd-login clearfix">
-                <a class="index-logo" href="/"></a>
+                <a class="index-logo" href="/"></a>fl form-box
                 <h1>用户登录</h1>
                 <a class="index-font" href="{% url 'home' %}">回到首页</a>
             </div>
